Fix footer on IE

--- a/style.css
+++ b/style.css
@@ -21,8 +21,11 @@ body {
 }
 
 .flex-grow {
-   flex: 1;
+   flex-grow: 1;
    margin-top: 60px;
+}
+footer {
+    flex-shrink: 0;
 }
 
 .wp-block-image .aligncenter {
@@ -341,6 +344,7 @@ img {
 /* Lightbox */
 #lightbox-modal .modal-content {
     background-color: transparent !important;
+    border: none;
 }
 #lightbox-modal img {
     margin-left: auto;
@@ -348,6 +352,7 @@ img {
     display: block;
     max-height: 90vh;
     width: auto !important;
+    border: 1px solid rgba(0, 0, 0, 0.2);
 }
 #lightbox-modal {
     text-align: center;
@@ -397,9 +402,10 @@ img {
 	}
 }
 
-#lightbox-modal .model-header {
-    height: 0;
-    padding: 0;
+#lightbox-modal .modal-header {
+    /*height: 0; */
+    /*padding: 0;*/
+    border: none;
 }
 #lightbox-modal .close {
     top: 16px;
@@ -409,7 +415,8 @@ img {
     cursor: pointer;
     text-align: center;
     font-family: Arial, sans-serif;
-    background: rgba(0,0,0, 0.3);
+    /*background: rgba(0,0,0, 0.3);*/
+    background: rgba(255,0,0, 0.5);
     color: #fff;
     -webkit-box-shadow: 0 0 6px -1px rgba(0, 0, 0, 0.2);
     box-shadow: 0 0 6px -1px rgba(0, 0, 0, 0.2);
